paper_experimental_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/structure_and_union_spec_c13/sample_001/target.compile.log
error: usage of an `unsafe` block
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/structure_and_union_spec_c13/sample_001/target.rs:95:8
   |
95 |     if unsafe { o.inner.inner_union.inner_struct.b } != 2 {
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: requested on the command line with `-F unsafe-code`

error: usage of an `unsafe` block
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/structure_and_union_spec_c13/sample_001/target.rs:98:8
   |
98 |     if unsafe { o.inner.inner_union.inner_struct.inner_union.deep } != 99 {
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: usage of an `unsafe` block
   --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/structure_and_union_spec_c13/sample_001/target.rs:101:8
    |
101 |     if unsafe { o.inner.inner_union.inner_struct.c } != 3 {
    |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: usage of an `unsafe` block
   --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/structure_and_union_spec_c13/sample_001/target.rs:107:8
    |
107 |     if unsafe { o.tail.tail_struct.tail_x } != 7 {
    |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: usage of an `unsafe` block
   --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/structure_and_union_spec_c13/sample_001/target.rs:110:8
    |
110 |     if unsafe { o.tail.tail_struct.tail_inner_union.tail_y } != 8 {
    |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: usage of an `unsafe` block
   --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/structure_and_union_spec_c13/sample_001/target.rs:132:5
    |
132 | /     unsafe {
133 | |         o.inner.inner_union.inner_struct.inner_union.deep = 0x11223344;
134 | |     }
    | |_____^

error: usage of an `unsafe` block
   --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/structure_and_union_spec_c13/sample_001/target.rs:136:8
    |
136 |     if unsafe { o.inner.inner_union.inner_struct.inner_union.xy.x } != 0x11223344 {
    |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: usage of an `unsafe` block
   --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/structure_and_union_spec_c13/sample_001/target.rs:140:5
    |
140 | /     unsafe {
141 | |         o.inner.inner_union.inner_struct.inner_union.xy.x = 5;
142 | |         o.inner.inner_union.inner_struct.inner_union.xy.y = 6;
143 | |     }
    | |_____^

error: usage of an `unsafe` block
   --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/structure_and_union_spec_c13/sample_001/target.rs:144:8
    |
144 |     if unsafe { o.inner.inner_union.inner_struct.inner_union.xy.x } != 5 {
    |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: usage of an `unsafe` block
   --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/structure_and_union_spec_c13/sample_001/target.rs:147:8
    |
147 |     if unsafe { o.inner.inner_union.inner_struct.inner_union.xy.y } != 6 {
    |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: usage of an `unsafe` block
   --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/structure_and_union_spec_c13/sample_001/target.rs:151:5
    |
151 | /     unsafe {
152 | |         o.tail.tail_struct.tail_inner_union.pq.tail_p = 40;
153 | |         o.tail.tail_struct.tail_inner_union.pq.tail_q = 41;
154 | |     }
    | |_____^

error: usage of an `unsafe` block
   --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/structure_and_union_spec_c13/sample_001/target.rs:155:8
    |
155 |     if unsafe { o.tail.tail_struct.tail_inner_union.pq.tail_p } != 40 {
    |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: usage of an `unsafe` block
   --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/structure_and_union_spec_c13/sample_001/target.rs:158:8
    |
158 |     if unsafe { o.tail.tail_struct.tail_inner_union.pq.tail_q } != 41 {
    |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: usage of an `unsafe` block
   --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/structure_and_union_spec_c13/sample_001/target.rs:162:5
    |
162 | /     unsafe {
163 | |         o.tail.tail_struct.tail_inner_union.tail_y = -9;
164 | |     }
    | |_____^

error: usage of an `unsafe` block
   --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/structure_and_union_spec_c13/sample_001/target.rs:165:8
    |
165 |     if unsafe { o.tail.tail_struct.tail_inner_union.tail_y } != -9 {
    |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0740]: field must implement `Copy` or be wrapped in `ManuallyDrop<...>` to be used in a union
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/structure_and_union_spec_c13/sample_001/target.rs:18:5
   |
18 |     inner_struct: InnerStruct,
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: union fields must not have drop side-effects, which is currently enforced via either `Copy` or `ManuallyDrop<...>`
help: wrap the field type in `ManuallyDrop<...>`
   |
18 |     inner_struct: std::mem::ManuallyDrop<InnerStruct>,
   |                   +++++++++++++++++++++++           +

error[E0740]: field must implement `Copy` or be wrapped in `ManuallyDrop<...>` to be used in a union
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/structure_and_union_spec_c13/sample_001/target.rs:32:5
   |
32 |     xy: XY,
   |     ^^^^^^
   |
   = note: union fields must not have drop side-effects, which is currently enforced via either `Copy` or `ManuallyDrop<...>`
help: wrap the field type in `ManuallyDrop<...>`
   |
32 |     xy: std::mem::ManuallyDrop<XY>,
   |         +++++++++++++++++++++++  +

error[E0740]: field must implement `Copy` or be wrapped in `ManuallyDrop<...>` to be used in a union
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/structure_and_union_spec_c13/sample_001/target.rs:44:5
   |
44 |     tail_struct: TailStruct,
   |     ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: union fields must not have drop side-effects, which is currently enforced via either `Copy` or `ManuallyDrop<...>`
help: wrap the field type in `ManuallyDrop<...>`
   |
44 |     tail_struct: std::mem::ManuallyDrop<TailStruct>,
   |                  +++++++++++++++++++++++          +

error[E0740]: field must implement `Copy` or be wrapped in `ManuallyDrop<...>` to be used in a union
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/structure_and_union_spec_c13/sample_001/target.rs:56:5
   |
56 |     pq: PQ,
   |     ^^^^^^
   |
   = note: union fields must not have drop side-effects, which is currently enforced via either `Copy` or `ManuallyDrop<...>`
help: wrap the field type in `ManuallyDrop<...>`
   |
56 |     pq: std::mem::ManuallyDrop<PQ>,
   |         +++++++++++++++++++++++  +

warning: unnecessary `unsafe` block
   --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/structure_and_union_spec_c13/sample_001/target.rs:132:5
    |
132 |     unsafe {
    |     ^^^^^^ unnecessary `unsafe` block
    |
    = note: `#[warn(unused_unsafe)]` (part of `#[warn(unused)]`) on by default

warning: unnecessary `unsafe` block
   --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/structure_and_union_spec_c13/sample_001/target.rs:140:5
    |
140 |     unsafe {
    |     ^^^^^^ unnecessary `unsafe` block

warning: unnecessary `unsafe` block
   --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/structure_and_union_spec_c13/sample_001/target.rs:151:5
    |
151 |     unsafe {
    |     ^^^^^^ unnecessary `unsafe` block

warning: unnecessary `unsafe` block
   --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/structure_and_union_spec_c13/sample_001/target.rs:162:5
    |
162 |     unsafe {
    |     ^^^^^^ unnecessary `unsafe` block

error: aborting due to 19 previous errors; 4 warnings emitted

For more information about this error, try `rustc --explain E0740`.